@@ -142,7 +142,7 @@ uninstall:
 
 clean: sweep
 	-rm -f *.o *.a $(TARGETS) mktable$(EXT)
-	-rm -f funcname.c funcname1.h funcname2.h tagtable.c
+	-rm -f funcname.c funcname1.h funcname2.h tagtable.c functable.c
 	-for dir in $(SCRIPTSUBDIRS);	\
 	do	\
 		(cd $$dir; $(MAKE) clean); \
