@@ -1,3 +1,10 @@
+2001-12-15  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
+	* [w3m-dev 02656]
+	* XMakefile (clean): remove functable.c
+	* anchor.c (_put_anchor_new): use Strnew_size() and Strcat_charp_n()
+	* indep.c (getescapechar): use GET_MYCDIGIT
+
 2001-12-13  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
 
 	* [w3m-dev 02541] mouse support on cygwin
